@@ -446,9 +446,10 @@ Grid *gridSetMap(Grid *g, int node,
 
 #define gridCostFunction(grid) (grid->costFunction)
 Grid *gridSetCostFunction(Grid *g, int costFunction);
-#define gridCOST_FCN_MEAN_RATIO   (0)
-#define gridCOST_FCN_ASPECT_RATIO (1)
-#define gridCOST_FCN_EDGE_LENGTH  (2)
+#define gridCOST_FCN_MEAN_RATIO            (0)
+#define gridCOST_FCN_ASPECT_RATIO          (1)
+#define gridCOST_FCN_EDGE_LENGTH           (2)
+#define gridCOST_FCN_JAC_SCALED_MEAN_RATIO (3)
 
 #define gridCostConstraint(grid) (grid->costConstraint)
 Grid *gridSetCostConstraint(Grid *g, int costConstraint);
